hw end